Fixed horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -220,6 +220,14 @@ template {
 }
 
 /* ===========================================
+ General
+ =========================================== */
+html {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
+/* ===========================================
 Typography
 =========================================== */
 body {
